test/cases/compile_errors/stage1/obj/undefined_function_call.zig
export fn a() void {
    b();
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:5: error: use of undeclared identifier 'b'
